environment.Environment.scala.error
Compilation error:
Environment:1: error: not found: value foward
foward() 
^